--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="location_permissions">Location Permissions</string>
     <string name="need_location_permission_message">Need Location Permission</string>
     <string name="location_permissions_granted_message">Has location permission</string>
+    <string name="privacy">http://www.google.com/policies/privacy</string>
 </resources>
